--- a/demo/sample.html
+++ b/demo/sample.html
@@ -6,8 +6,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script type="text/javascript">
         $(function(){
-        	$('#fj_frm').on('submit', fonsubmit);
-        	$('#fj_frm').on('submit', fonsubmit);
+//        	$('#fj_frm').on('submit', fonsubmit);
+//        	$('#fj_frm').on('submit', fonsubmit);
         })
         function fonsubmit(){
             alert('Hello');
@@ -15,7 +15,7 @@
         </script>
     </head>
     <body>
-        <form name="frm" id="fj_frm" action="sample2.html" method="get">
+        <form name="frm" id="fj_frm" action="sample2.html" method="get" onsubmit="fonsubmit()">
             カード番号：<input type="text" name="card_no"> <br />
             有効期限：<input type="text" name="exp_date"> <br />
             セキュリティコード：<input type="text" name="sec_code"> <br />
