--- a/demo/sample_func_call.html
+++ b/demo/sample_func_call.html
@@ -10,16 +10,31 @@
 //        	$('#fj_frm').on('submit', fonsubmit);
         })
         function fonsubmit(){
-            alert('Hello');
+            //加盟店側の処理
+            //...
+            //...
+            var data = {
+                'card_info': {
+                    'card_no': $('#card_no').val(),
+                    'exp_date': $('#exp_date').val(),
+                    'sec_code': $('#sec_code').val()
+                }
+            };
+            fraudjudge(document.forms[0], data, function(){
+                document.forms[0].submit();
+            });
         }
         </script>
     </head>
     <body>
-        <form name="frm" id="fj_frm" action="sample2.html" method="get" onsubmit="fonsubmit()">
+        <h1>加盟店画面１</h1>
+        <hr>
+        <form name="frm" id="fjargm" action="result.html" method="get" onsubmit="fonsubmit()">
             カード番号：<input type="text" name="card_no"> <br />
             有効期限：<input type="text" name="exp_date"> <br />
             セキュリティコード：<input type="text" name="sec_code"> <br />
-            <input type="submit">
+            <br />
+            <input type="button" onclick="fonsubmit()" value="送信">
         </form>
 
         <script src="http://localhost:8080/js/fraudjudge.js"></script>
