--- a/demo/sample_event_hook.html
+++ b/demo/sample_event_hook.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <h1>加盟店画面１</h1>
+        <h3>自動イベントフック版</h3>
         <hr>
         <form name="frm" id="fj_frm" action="result.html" method="get" onsubmit="fonsubmit()">
             カード番号：<input type="text" name="card_no"> <br />
