--- a/demo/sample_func_call.html
+++ b/demo/sample_func_call.html
@@ -28,6 +28,7 @@
     </head>
     <body>
         <h1>加盟店画面１</h1>
+        <h3>手動呼出し版</h3>
         <hr>
         <form name="frm" id="fjargm" action="result.html" method="get" onsubmit="fonsubmit()">
             カード番号：<input type="text" name="card_no"> <br />
