webpack版にしたのでサンプルからjQueryを排除

--- a/demo/sample_func_call.html
+++ b/demo/sample_func_call.html
@@ -2,22 +2,16 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script type="text/javascript">
-        $(function(){
-//        	$('#fj_frm').on('submit', fonsubmit);
-//        	$('#fj_frm').on('submit', fonsubmit);
-        })
         function fonsubmit(){
             //加盟店側の処理
             //...
             //...
             var data = {
                 'card_info': {
-                    'card_no': $('#card_no').val(),
-                    'exp_date': $('#exp_date').val(),
-                    'sec_code': $('#sec_code').val()
+                    'card_no': document.getElementById('card_no').value,
+                    'exp_date': document.getElementById('exp_date').value,
+                    'sec_code': document.getElementById('sec_code').value
                 }
             };
             fraudjudge(data, function(result){
@@ -33,9 +27,9 @@
         <h3>手動呼出し版</h3>
         <hr>
         <form name="frm" id="fjargm" action="result.html" method="get" onsubmit="fonsubmit()">
-            カード番号：<input type="text" name="card_no"> <br />
-            有効期限：<input type="text" name="exp_date"> <br />
-            セキュリティコード：<input type="text" name="sec_code"> <br />
+            カード番号：<input type="text" name="card_no" id="card_no" value=""> <br />
+            有効期限：<input type="text" name="exp_date" id="exp_date" value=""> <br />
+            セキュリティコード：<input type="text" name="sec_code" id="sec_code" value=""> <br />
             <br />
             <input type="hidden" name="fj_token" id="fj_token" value="">
             <input type="hidden" name="fj_level" id="fj_level" value="">
